# chair-table-animation

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  main.hpp  model.hpp  utils.hpp
lib/glsdk/: CMakeLists.txt
lib/glsdk/freeglut/: Makefile  config.status  libtool
lib/glsdk/freeglut/doc/: Makefile
lib/glsdk/freeglut/include/: Makefile
lib/glsdk/freeglut/include/GL/: Makefile
lib/glsdk/freeglut/progs/: Makefile
lib/glsdk/freeglut/progs/demos/: Makefile
lib/glsdk/freeglut/progs/demos/CallbackMaker/: Makefile
lib/glsdk/freeglut/progs/demos/Fractals/: Makefile
lib/glsdk/freeglut/progs/demos/Fractals_random/: Makefile
lib/glsdk/freeglut/progs/demos/Lorenz/: Makefile
lib/glsdk/freeglut/progs/demos/One/: Makefile
lib/glsdk/freeglut/progs/demos/shapes/: Makefile
lib/glsdk/freeglut/progs/demos/smooth_opengl3/: Makefile
lib/glsdk/freeglut/progs/demos/spaceball/: Makefile
lib/glsdk/freeglut/src/: Makefile
lib/glsdk/glm/: CMakeLists.txt
shader/: fragment.frag  vertex.vert
src/: camera.cpp  main.cpp  model.cpp  utils.cpp
